tests/NormalTests/paczka2/big_fuzzy/76265039.err
Error in line 2: S674 A372 46,0
Error in line 1: nQxTV A36 80,4
Error in line 9: Nj9CHf1HO A36 73,5
Error in line 15: Nj9CHf1HO S674 70,3
Error in line 22: S674 A36 69,30
Error in line 19: PxC3ZBdW A36 16,5
Error in line 17: Bi6RRYAQmLQ A36 58,6
Error in line 3: S674 S121 8,2
Error in line 39: 5EBtOhF A36 39,0
Error in line 42: PxC3ZBdW S121 38,2
Error in line 32: S674 A36 14,5
Error in line 51: Bi6RRYAQmLQ S674 67,7
Error in line 56: 5EBtOhFL S121 74,3
Error in line 57: Wtl S674 34,3
Error in line 63: S674 A372 73,2
Error in line 68: 5EBtOhFL S674 3,7
Error in line 85: 5EBtOhFL A372 -1,4
Error in line 94: Nj9CHf1HO S674 420,52
Error in line 92: Nj9CHf1HO S674 98,4
Error in line 100: Bi6RRYAQmLQ A372 17,9
Error in line 101: Bi6RRYAQmLQ A36 25,2
Error in line 96: Nj9CHf1HO A372 30,6
Error in line 74: 5EBtOhFL A372 60,5
Error in line 108: Wtl A372 3,9
Error in line 114: S674 A36 12,8
Error in line 102: Bi6RRYAQmLQ S674 48,4
Error in line 123: PxC3ZBdW S674 15,3
Error in line 153: nQxTV S121 13j,9
Error in line 151: nQxTV S121 69,0
Error in line 131: S674 A372 345,9
Error in line 155: 5EBtOhFL S674 90,4
Error in line 158: S674 S121 60,8
Error in line 145: PxC3ZBdW S121 86,1
Error in line 166: S674 S121 79,8
Error in line 180: S674 S674 9,6
Error in line 190: Wtl S121 17,99
Error in line 193: 5EBtOhFL A36 78,7
Error in line 185: S674 A372 94,5
Error in line 202: Wtl S121 39,1
Error in line 195: PxC3ZBdW S674 181,1
Error in line 211: 5EBtOhFL S121 75,4
Error in line 206: nQxTV S121 59,7
Error in line 219: Wtl S674 25,7
Error in line 221: Wtl S121 47,9
Error in line 234: Bi6RRYAQmLQ S674 249,8
Error in line 237: Bi6RRYAQmLQ A36 65,9
Error in line 241: PxC3ZBdW S674 38,57
Error in line 163: Nj9CHf1HO S674 4,7
Error in line 236: nQxTV A372 200,2
Error in line 232: PxC3ZBdW S121 70,7
